fix: set border-radius of the first card on mobile version

--- a/style.css
+++ b/style.css
@@ -95,4 +95,9 @@ body {
   .card-container > .card {
     width: 320px;
   }
+
+  .card-container > .card:first-child {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
 }
